--- a/package.json
+++ b/package.json
@@ -2,12 +2,50 @@
   "name": "jest-remote",
   "version": "0.1.0",
   "description": "Run Jest tests anywhere - get reporting in your terminal",
-  "repository": "https://github.com/kraenhansen/",
-  "keywords": ["jest"],
+  "repository": "https://github.com/kraenhansen/jest-remote",
+  "keywords": [
+    "jest",
+    "jest-runner",
+    "remote"
+  ],
   "author": {
     "name": "Kræn Hansen",
     "email": "mail@kraenhansen.dk",
     "url": "https://github.com/kraenhansen"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "scripts": {
+    "test": "npm test --workspace jest-remote-e2e"
+  },
+  "type": "module",
+  "exports": {
+    "./client": "./client.js",
+    "./runner": "./runner.js"
+  },
+  "workspaces": [
+    "packages/client",
+    "packages/runner",
+    "packages/e2e"
+  ],
+  "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "@jest/types": "^29.5.0",
+    "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "prettier": "2.8.7",
+    "typescript": "^5.0.3",
+    "wireit": "^0.9.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:prettier/recommended"
+    ]
+  }
 }
