--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -23,6 +23,7 @@
   "author": "Kræn Hansen <mail@kraenhansen.dk>",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
     "cosmiconfig": "^8.2.0",
     "ws": "^8.13.0"
   },
