--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -31,6 +31,7 @@
     "jest": "^29"
   },
   "devDependencies": {
-    "@types/ws": "^8.5.5"
+    "@types/ws": "^8.5.5",
+    "jest-runner-remote-protocol": "*"
   }
 }
