--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -11,9 +11,21 @@
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "wireit",
     "lint": "eslint",
     "test": "jest"
+  },
+  "wireit": {
+    "build": {
+      "command": "tsc",
+      "files": [
+        "./src",
+        "./tsconfig.json"
+      ],
+      "output": [
+        "./dist"
+      ]
+    }
   },
   "keywords": [
     "jest",
