--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -4,7 +4,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "ES2022",
-    "module": "ES2022",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "declaration": true,
     "outDir": "dist",
