Serialize + deserialize errors

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,6 +24,9 @@
     },
     "build": {
       "command": "tsc",
+      "dependencies": [
+        "../protocol:build"
+      ],
       "files": [
         "./src",
         "./tsconfig.json"
