--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -18,6 +18,9 @@
   "wireit": {
     "build": {
       "command": "tsc",
+      "dependencies": [
+        "../protocol:build"
+      ],
       "files": [
         "./src",
         "./tsconfig.json"
