--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "node",
     "declaration": true,
     "outDir": "dist",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
   "include": [
     "src"
