Adding an expo example

--- a/packages/protocol/package.json
+++ b/packages/protocol/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jest-runner-remote-protocol",
+  "name": "jest-remote-protocol",
   "private": true,
   "type": "commonjs",
   "main": "./dist/index.js",
