--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "license": "ISC",
   "scripts": {
-    "test": "npm test --workspace jest-remote-e2e"
+    "test": "npm test --workspace jest-remote-protocol --workspace jest-remote-e2e"
   },
   "type": "module",
   "exports": {
@@ -23,10 +23,8 @@
     "./runner": "./runner.js"
   },
   "workspaces": [
-    "packages/protocol",
-    "packages/client",
-    "packages/runner",
-    "packages/e2e"
+    "packages/*",
+    "examples/*"
   ],
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
@@ -39,7 +37,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "prettier": "2.8.7",
-    "typescript": "^5.0.3",
+    "typescript": "^5.1.3",
     "wireit": "^0.9.5"
   },
   "eslintConfig": {
