--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -18,7 +18,7 @@
     "jest-remote-runner": "*",
     "jest-remote-client": "*"
   },
-  "jest-runner-remote": {
-    "command": "npx jest-runner-remote-client"
+  "jest-remote": {
+    "command": "npx jest-remote"
   }
 }
